crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/028.cypher
MERGE (n:Foo); MERGE (m:Bar)
